# swagger.yaml
@@ -12,13 +12,54 @@ schemes:
   - http
   - https
 tags:
-  - name: RuleManagement
+  - name: Rule Management
     description: Download Zip
 paths:
+  /ruleBundles:
+    post:
+      tags:
+        - Rule Management
+      summary: Accept rule pushes request from console to store it.
+      description: Accept rule pushes request from console to store it.
+      operationId: pushRuleBundles
+      produces:
+        - application/json
+      consumes:
+        - multipart/form-data
+      parameters:
+        - name: types
+          in: path
+          description: rule types
+          required: true
+          type: string
+        - name: tenantId
+          in: path
+          description: tenant id
+          required: true
+          type: string
+        - name: version
+          in: path
+          description: rule version
+          required: true
+          type: string
+        - name: ruleZip
+          in: formData
+          description: rule bundles
+          required: true
+          type: file
+      responses:
+        '200':
+          description: RuleBundle ID
+          schema:
+            type: string
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Pet not found
   /downLoadZipInFile:
     get:
       tags:
-        - RuleManagement
+        - Rule Management
       summary: Load rules from SDK.
       description: >-
         Return a zip file as a byte array in customised response entity,then the
@@ -36,14 +77,40 @@ paths:
           description: Invalid ID supplied
         '404':
           description: not found
-  /downLoadZipInBytes:
+  /rules:
     get:
       tags:
-        - RuleManagement
+        - Rule Management
       summary: Load rules from SDK.
       description: >-
         Return a zip file as a byte array in customised response entity,then the
         client can get the array.
+      parameters:
+        - name: type
+          in: path
+          description: rule types
+          required: true
+          type: string
+        - name: ruleSetName
+          in: path
+          description: if business rule
+          required: true
+          type: string
+        - name: tableName
+          in: path
+          description: if table rule,table set/table name
+          required: true
+          type: string
+        - name: tenantId
+          in: path
+          description: Hu B2c
+          required: true
+          type: string
+        - name: version
+          in: path
+          description: v0.1.0
+          required: true
+          type: string
       responses:
         '200':
           description: >-
